# smart_fleet

./: .gitignore  README.md  pyproject.toml
src/smart_fleet/app/: enums.py  main.py
src/smart_fleet/app/core/: config.py  database.py
src/smart_fleet/app/db/: driver_crud.py  sensor_crud.py  vehicle_crud.py
src/smart_fleet/app/models/: driver.py  sensor.py  vehicle.py
src/smart_fleet/app/routes/: driver.py  sensor.py  vehicle.py
src/smart_fleet/app/schemas/: driver.py  enums.py  sensor.py  vehicle.py
src/smart_fleet/app/services/: sensor_service.py
